수정-recipes/detail페이지의 상단 정보 수정, view함수 오류 수정

--- a/recipes/templates/recipes/create.html
+++ b/recipes/templates/recipes/create.html
@@ -28,6 +28,7 @@
 
 {% block script %}
 <script>
+  {% comment %} 썸네일 미리보기 {% endcomment %}
   function previewThumbnail(event) {
     const preview = document.querySelector('#thumbnail_preview');
     const file = event.target.files[0];
