추가-profile페이지

--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -2,9 +2,249 @@
 {% load static %}
 {% block link %}
 <link rel="stylesheet" href="{% static 'css/button.css' %}">
+<link rel="stylesheet" href="{% static 'css/hover.css' %}">
+<link rel="stylesheet" href="{% static 'css/account_profile.css' %}">
 {% endblock link %}
+{% block style %}
+<style>
+  .main--padding {
+    padding-left: 80px;
+    padding-right: 80px;
+    margin-top: 40px;
+  }
+  
+  .title--username {
+    font-weight: bold;
+    background-color: var(--subtle-color);
+    text-align: center;
+    padding: 10px 0px;
+  }
+  
+  .profile--box {
+    {% comment %} border: solid 3px var(--subtle-color); {% endcomment %}
+    background:  var(--subtle-color);
+    min-width: 210px; 
+    position: relative;
+    padding-bottom: 10px;
+  }
+  
+  .profile--back--image {
+    width: 100%;
+    filter: brightness(50%);
+  }
+
+  .profile--image {
+    width: 30%;
+    object-fit: cover;
+    border-radius: 60px;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: 5px 5px 5px gray;
+    z-index: 2;
+  }
+
+
+  .profile--image--icon {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    z-index: 1;
+  }
+
+  .profile--image__same:hover{
+    filter: brightness(50%);
+    cursor: pointer;
+    z-index: 0;
+  }
+
+
+  
+
+  @media (max-width: 768px) {
+    .profile--image {
+      top: 50%;
+      min-width: 60px;
+    }
+    
+  .profile--image--icon {
+    top: 45%;
+  }
+  }
+
+
+  @media (max-width: 1380px) {
+    .main--padding{
+      padding-left: 0px;
+      padding-right: 0px;
+    }
+
+    }
+
+
+</style>
+{% endblock style %}
+
+{% block banner %}
+<div class='title--username'>
+  {% if request.user.username == person.username %}
+  <h3>{{person.username}} 마이페이지</h3>
+  {% else %}
+  <h3>{{person.username}} 프로필</h3>
+  {% endif %}
+</div>
+{% endblock banner %}
+
 {% block content %}
-  {{ person.username }}님의 프로필 페이지
-  <a href="{% url 'accounts:update' %}">내 정보 수정</a>
+<div class="main--padding container">
+  <div class="row">
+    <div class="col-12 col-md-7 col-lg-8">
+      {% comment %} 내가 쓴 레시피 {% endcomment %}
+      <h5>My recipes</h5>
+      {% for recipe in recipes %}
+        {{recipe.title}}
+      {% endfor %}
+      <ul class="pagination justify-content-center">
+        {% if  recipes.has_previous %}
+          <li class="page-item">
+            <a class="page-link" href="?page={{   recipes.previous_page_number }}">이전</a>
+          </li>
+        {% else %}
+          <li class="page-item disabled">
+            <a class="page-link" tabindex="-1" aria-disabled="true" href="#">이전</a>
+          </li>
+        {% endif %}
+        {% for page_number in   recipes.paginator.page_range %}
+          {% if page_number >=  recipes.number|add:-5 and page_number <=   recipes.number|add:5 %}
+            {% if page_number ==  recipes.number %}
+              <li class="page-item active" aria-current="page">
+                <a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a>
+              </li>
+            {% else %}
+              <li class="page-item">
+                <a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a>
+              </li>
+            {% endif %}
+          {% endif %}
+        {% endfor %}
+        {% if   recipes.has_next %}
+          <li class="page-item">
+            <a class="page-link" href="?page={{   recipes.next_page_number }}">다음</a>
+          </li>
+        {% else %}
+          <li class="page-item disabled">
+            <a class="page-link" tabindex="-1" aria-disabled="true" href="#">다음</a>
+          </li>
+        {% endif %}
+      </ul>
+
+
+      <h5>My review</h5>
+      {% for review in reviews %}
+        {{review.title}}
+      {% endfor %}
+      <ul class="pagination justify-content-center">
+        {% if  reviews.has_previous %}
+          <li class="page-item">
+            <a class="page-link" href="?page={{   reviews.previous_page_number }}">이전</a>
+          </li>
+        {% else %}
+          <li class="page-item disabled">
+            <a class="page-link" tabindex="-1" aria-disabled="true" href="#">이전</a>
+          </li>
+        {% endif %}
+        {% for page_number in reviews.paginator.page_range %}
+          {% if page_number >=  reviews.number|add:-5 and page_number <=   reviews.number|add:5 %}
+            {% if page_number ==  reviews.number %}
+              <li class="page-item active" aria-current="page">
+                <a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a>
+              </li>
+            {% else %}
+              <li class="page-item">
+                <a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a>
+              </li>
+            {% endif %}
+          {% endif %}
+        {% endfor %}
+        {% if   reviews.has_next %}
+          <li class="page-item">
+            <a class="page-link" href="?page={{   reviews.next_page_number }}">다음</a>
+          </li>
+        {% else %}
+          <li class="page-item disabled">
+            <a class="page-link" tabindex="-1" aria-disabled="true" href="#">다음</a>
+          </li>
+        {% endif %}
+      </ul>
+
+    {% comment %} bookmark? likes? {% endcomment %}
+    <h5>like recipes</h5>
+    {% for recipe in person.like_recipes.all  %}
+      {{recipe}}
+    {% endfor %}
+
+
+
+    </div>
+    <div class="col-12 col-md-5 col-lg-4">
+      <div class="profile--box">
+        <img src="{% static 'image/profilebackgroundimage.jpg' %}" class="profile--back--image"  alt="profile">
+        {% comment %} 프로필 수정 + 프로필 이미지 {% endcomment %}
+        {% if person.image %}
+          {% if request.user.username == person.username %}
+            <a href="{% url 'accounts:update' %}">
+              <img src="{{person.image.url}}" class="profile--image profile--image__same" alt="profile">
+              <i class="bi bi-pencil-square profile--image--icon"></i>
+            </a>
+          {% else %}
+            <img src="{{person.image.url}}" class="profile--image" alt="profile">
+          {% endif %}
+          {% else %}
+            {% if request.user.username == person.username %}
+              <a href="{% url 'accounts:update' %}">
+                <img src="{% static 'image/no_image432.png' %}" class="profile--image profile--image__same" alt="no-profile">
+                <i class="bi bi-pencil-square profile--image--icon"></i>
+              </a>
+            {% else %}
+            <img src="{% static 'image/no_image432.png' %}" class="profile--image" alt="no-profile">
+            {% endif %}
+        {% endif %}
+        {% comment %} 팔로워 {% endcomment %}
+          <div class="profile--bottom text-center">
+            <div class='mt-5'>
+              <p class='my-2'>{{ person.username }}</p>
+              {% if request.user != person %}
+                <form id="follow-form" data-user-id="{{person.pk}}">
+                  {% csrf_token %}
+                  {% if request.user in person.folloers.all %}
+                    <input type="submit" value="Unfollow" class="button--reversecolor rounded btn-hover__reverseblue text-center p-1">
+                    {% else %}
+                    <input type="submit" value="Follow" class="button--reversecolor rounded btn-hover__reverseblue text-center p-1">
+                  {% endif %}
+                </form>
+              {% endif %} 
+              {% comment %} 버튼 보기위해 만듬 삭제 필수 {% endcomment %}
+              <a href="{% url 'accounts:update' %}" class="button--reversecolor rounded btn-hover__reverseblue text-center p-1">follow</a>
+
+              <div class='d-flex mt-2 justify-content-evenly'>
+                <p>팔로잉</p>
+                <p>팔로워</p>
+              </div>
+              <div class='d-flex mt-2 mb-4 justify-content-evenly'>
+                {% comment %} 모델을 받기 전이라 0 추가 {% endcomment %}
+                <p>{{person.following.count}} 0</p>
+                <p>{{person.folloers.count}} 0</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</content>
   
 {% endblock content %}
