--- a/static/css/base.css
+++ b/static/css/base.css
@@ -14,6 +14,7 @@ p {
 
 a {
   text-decoration: none;
+  color: black;
 }
 
 ul {
@@ -82,7 +83,7 @@ footer {
   padding-bottom: 10px;
 }
 
-@media (max-width: 840px) {
+@media (max-width: 990px) {
   .search_hidden {
     display: none;
   }
@@ -134,6 +135,7 @@ footer {
 .nav--btn:hover{
   font-weight: bold;
 }
+
 
 
 /* font */
