추가-ProductDetail_AccountProfile

--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -9,89 +9,6 @@
 {% endblock link %}
 {% block style %}
 <style>
-  .main--padding {
-    padding-left: 80px;
-    padding-right: 80px;
-    margin-top: 40px;
-  }
-  
-  .title--username {
-    font-weight: bold;
-    background-color: var(--subtle-color);
-    text-align: center;
-    padding: 10px 0px;
-  }
-  
-  .profile--box {
-    {% comment %} border: solid 3px var(--subtle-color); {% endcomment %}
-    background:  var(--subtle-color);
-    min-width: 210px; 
-    position: relative;
-    padding-bottom: 10px;
-  }
-  
-  .profile--back--image {
-    width: 100%;
-    filter: brightness(50%);
-  }
-
-  .profile--image {
-    width: 30%;
-    object-fit: cover;
-    border-radius: 60px;
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    box-shadow: 5px 5px 5px gray;
-    z-index: 2;
-  }
-
-
-  .profile--image--icon {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    z-index: 1;
-  }
-
-  .profile--image__same:hover{
-    filter: brightness(50%);
-    cursor: pointer;
-    z-index: 0;
-  }
-
-
-  
-
-  @media (max-width: 768px) {
-    .profile--image {
-      top: 50%;
-      min-width: 60px;
-    }
-    
-  .profile--image--icon {
-    top: 45%;
-  }
-  }
-
-
-  @media (max-width: 1380px) {
-    .main--padding{
-      padding-left: 0px;
-      padding-right: 0px;
-    }
-
-    }
-
-    .list--detail:hover {
-      box-shadow: inset 0 0 20px var(--subtle-color);
-      cursor: pointer;
-  }
-
-
 </style>
 {% endblock style %}
 
@@ -265,64 +182,60 @@
       </div>
       {% endfor %}
     </div>
+  </div>
 
-
-
-
-    </div>
-    <div class="col-12 col-md-5 col-lg-4">
-      <div class="profile--box">
-        <img src="{% static 'image/profilebackgroundimage.jpg' %}" class="profile--back--image"  alt="profile">
-        {% comment %} 프로필 수정 + 프로필 이미지 {% endcomment %}
-        {% if person.image %}
+  <div class="col-12 col-md-5 col-lg-4 ">
+    <div class="profile--box" id='profile-box'>
+      <img src="{% static 'image/profilebackgroundimage.jpg' %}" class="profile--back--image"  alt="profile">
+      {% comment %} 프로필 수정 + 프로필 이미지 {% endcomment %}
+      {% if person.image %}
+        {% if request.user.username == person.username %}
+          <a href="{% url 'accounts:update' %}">
+            <img src="{{person.image.url}}" class="profile--image profile--image__same" alt="profile">
+            <i class="bi bi-pencil-square profile--image--icon"></i>
+          </a>
+        {% else %}
+          <img src="{{person.image.url}}" class="profile--image" alt="profile">
+        {% endif %}
+        {% else %}
           {% if request.user.username == person.username %}
             <a href="{% url 'accounts:update' %}">
-              <img src="{{person.image.url}}" class="profile--image profile--image__same" alt="profile">
+              <img src="{% static 'image/no_image432.png' %}" class="profile--image profile--image__same" alt="no-profile">
               <i class="bi bi-pencil-square profile--image--icon"></i>
             </a>
           {% else %}
-            <img src="{{person.image.url}}" class="profile--image" alt="profile">
+          <img src="{% static 'image/no_image432.png' %}" class="profile--image" alt="no-profile">
           {% endif %}
-          {% else %}
-            {% if request.user.username == person.username %}
-              <a href="{% url 'accounts:update' %}">
-                <img src="{% static 'image/no_image432.png' %}" class="profile--image profile--image__same" alt="no-profile">
-                <i class="bi bi-pencil-square profile--image--icon"></i>
-              </a>
-            {% else %}
-            <img src="{% static 'image/no_image432.png' %}" class="profile--image" alt="no-profile">
-            {% endif %}
-        {% endif %}
-        {% comment %} 팔로워 {% endcomment %}
-          <div class="profile--bottom text-center">
-            <div class='mt-5'>
-              <p class='my-2'>{{ person.username }}</p>
-              {% if request.user != person %}
-                <form id="follow-form" data-user-id="{{person.pk}}">
-                  {% csrf_token %}
-                  {% if request.user in person.folloers.all %}
-                    <input type="submit" value="Unfollow" class="button--reversecolor rounded btn-hover__reverseblue text-center p-1">
-                  {% else %}
-                    <input type="submit" value="Follow" class="button--reversecolor rounded btn-hover__reverseblue text-center p-1">
-                  {% endif %}
-                </form>
-              {% endif %} 
+      {% endif %}
+      {% comment %} 팔로워 {% endcomment %}
+        <div class="profile--bottom text-center">
+          <div class='mt-5'>
+            <p class='my-2'>{{ person.username }}</p>
+            {% if request.user != person %}
+              <form id="follow-form" data-user-id="{{person.pk}}">
+                {% csrf_token %}
+                {% if request.user in person.folloers.all %}
+                  <input type="submit" value="Unfollow" class="button--reversecolor rounded btn-hover__reverseblue text-center p-1">
+                {% else %}
+                  <input type="submit" value="Follow" class="button--reversecolor rounded btn-hover__reverseblue text-center p-1">
+                {% endif %}
+              </form>
+            {% endif %} 
 
-              <div class='d-flex mt-2 justify-content-evenly'>
-                <p>팔로잉</p>
-                <p>팔로워</p>
-              </div>
-              <div class='d-flex mt-2 mb-4 justify-content-evenly'>
-                <p id="followings-count">{{person.followings.count}}</p>
-                <p id='followers-count'>{{person.followers.count}}</p>
-              </div>
+            <div class='d-flex mt-2 justify-content-evenly'>
+              <p>팔로잉</p>
+              <p>팔로워</p>
+            </div>
+            <div class='d-flex mt-2 mb-4 justify-content-evenly'>
+              <p id="followings-count">{{person.followings.count}}</p>
+              <p id='followers-count'>{{person.followers.count}}</p>
             </div>
           </div>
         </div>
       </div>
     </div>
-
   </div>
+
 </content>
   
 {% endblock content %}
@@ -331,28 +244,9 @@
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="{% static 'js/accounts_profile_follow.js' %}"></script>
   <script src="{% static 'js/recipes_index_owl.js' %}"></script>
+  <script src="{% static 'js/profile_carosuel.js' %}"></script>
+  <script src="{% static 'js/profile_scroll.js' %}"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script type="text/javascript">
-    $('.recipes-owl').owlCarousel({
-      loop:false,
-      margin:10,
-      nav:false,
-      responsive:{
-          0:{
-              items:2,
-              slideBy:2,
-          },
-          720:{
-              items:3,
-              slideBy:3,
-          },
-          1140:{
-              items:4,
-              slideBy:4,
-          },
-      }
-    })
-  </script>
 
 {% endblock script %}
