--- a/products/templates/products/detail.html
+++ b/products/templates/products/detail.html
@@ -5,6 +5,9 @@
   <link rel="stylesheet" href="{% static 'css/button.css' %}">
   <link rel="stylesheet" href="{% static 'css/products_detail.css' %}">
   <link rel="stylesheet" href="{% static 'css/hover.css' %}">
+  <link rel="stylesheet" href="{% static 'css/products_index.css' %}">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 {% endblock link %}
 {% block style %}
 <style>
@@ -61,6 +64,25 @@
         </div>     
     </div>
   <hr>
+{% comment %} 인기순 관련 레시피 정렬 {% endcomment %}
+<h5 class='mt-5 mb-3'>연관 레시피 <span class='comment--color'>{{recipes|length}}</span></h5>
+  <div class='owl-carousel new_owl-carousel  owl-theme' >
+  {% for recipe  in recipes %}
+  <div class='card--border card--border--gray'>
+    <a href="{% url 'recipes:detail' recipe.pk %}">
+      <img src="{{recipe.thumbnail.url}}" class='rounded' alt="img">  
+      <div class='card--name--box'>
+        <strong class='card--name'>{{recipe.title}}</strong>
+      </div>
+      <div class='card--tag--border'>    
+        <p><i class="bi bi-heart-fill card--rating__color me-2"></i>{{recipe.like_users.count}}</p>
+        <p>리뷰 {{recipe.review_set.count}}</p>
+      </div>
+    </a>  
+  </div>
+  {% endfor %}
+  </div>
+
 
   
   
@@ -162,7 +184,9 @@
     <script src="{% static 'js/product_detail_comment_like.js' %}"></script>
     <script src="{% static 'js/product_detail_comment_create.js' %}"></script>
     <script src="{% static 'js/product_detail_comment_delete.js' %}"></script>
-    <script>
-    </script> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="{% static 'js/products_index.js' %}"></script>
+    <script src="{% static 'js/products_index.js' %}"></script>
   {% endblock script %}
 
