--- a/static/css/recipes_detail.css
+++ b/static/css/recipes_detail.css
@@ -95,14 +95,15 @@
 
 /* CK editor 작성 결과 화면  */
 .recipe__content{
-  margin: 0 30px 30px 30px;
+  width: 100%;
+  margin: 0 0 30px 0;
+  border-bottom: 1px solid var(--subtle-color);
+  padding: 15px
 }
 
-.recipe__content img {
-  /* width: 100% !important;
-  height: auto !important; */
+.ck__content-container {
+  display: inline-block;
 }
-
 /* 레시피 footer */
 .recipe__footer__info {
   display: flex;
